# pointproofs

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  main.go
VectorCommit/: VectorCommit.go  vector_commit.h
lib/: rustdemo.h
pointsproofs/benches/: bench.rs
pointsproofs/src/: lib.rs  param.rs
rust-demo/: Cargo.toml
rust-demo/src/: lib.rs
vc_api/: Cargo.toml
vc_api/src/: commit.rs  lib.rs  util.rs
