[package]
name = "vc_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pointproof = { path = "../pointsproofs" }
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
rand = "0.8"
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }

rand_chacha = "0.3.0"
base64 = "0.12"
libc = "0.2"

